[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mpackview"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "asyncqt >= 0.8",
    "matplotlib >= 3.5",
    "mpacklog >= 3.1.0",
    "PySide2 >= 5.11.0",
    "qtpy >= 2.0.1",
]
keywords = ["messagepack", "serialization", "logging", "telemetry"]

[project.scripts]
mpackview = "mpackview:main"

[project.urls]
Source = "https://github.com/upkie/mpacklog.py"
Tracker = "https://github.com/upkie/mpacklog.py/issues"
Changelog = "https://github.com/upkie/mpacklog.py/blob/master/CHANGELOG.md"

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]

[tool.lint.ruff.pydocstyle]
convention = "google"
